# odu-rs

./: Cargo.toml  expand.rs
core/: Cargo.toml
core/src/: lib.rs  user.rs
core/src/entities/: mod.rs  prelude.rs  project.rs  resouce_resouce_type.rs  resource.rs  resource_type.rs  user.rs
docs/: architecture.puml  archtechture.md  data.puml  schema.md  udd.md  udi.md  upd.md  validate.md  value.md
floating/: Cargo.toml
floating/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230318_004047_resource_type.rs  m20230318_004236_resource.rs  m20230318_004811_resource_type_types.rs
models/: models.model
odu-func/: Cargo.toml
odu-func/examples/: funcs.rs
odu-func/src/: callable.rs  callable_async.rs  callable_fn.rs  error.rs  func.rs  lib.rs  resultable.rs
odu-func/src/arguments/: args.rs  error.rs  from_args.rs  mod.rs  to_args.rs
odu-func/src/signature/: params.rs  sign.rs
odu-input/: Cargo.toml
odu-input/examples/: input.rs
odu-input/src/: lib.rs
odu-macros/: Cargo.toml
odu-macros/src/: lib.rs
odu-types/: Cargo.toml
odu-types/examples/: serde-types.rs
odu-types/src/: lib.rs  registry.rs  struct.rs  traits.rs  types.rs
odu-validate/: Cargo.toml
odu-validate/examples/: validate.rs
odu-validate/src/: error.rs  lib.rs  type_ext.rs  validation.rs  validators.rs
odu-validate/src/validations/: compare.rs  item.rs  mod.rs  number_size.rs  oneof.rs  required.rs  tuple.rs  types.rs
odu-value/: Cargo.toml
odu-value/src/: from_value.rs  index.rs  into_value.rs  lib.rs  list.rs  macros.rs  merge.rs  number.rs  object.rs  ser.rs  shared.rs  time.rs  value.rs
odu-value/src/de/: mod.rs  number.rs  time.rs  value.rs
