[package]
name = "odu-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["dep:serde"]
derive = ["odu-macros"]

[dependencies]
odu-macros = { path = "../odu-macros", optional = true }
serde = { version = "1", default-features = false, features = [
    "derive",
    "alloc",
], optional = true }
bytes = { version = "1", default-features = false }

once_cell = "1"
parking_lot = "0.12"
ahash = "0.8"
chrono = { version = "0.4" }
