[package]
name = "odu-value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
std = ["bytes/std", "serde?/std"]
serde = ["dep:serde", "hashbrown/serde", "chrono/serde"]
ord = []

[dependencies]
odu-types = { path = "../odu-types" }
hashbrown = { version = "0.13" }
bytes = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = [
    "alloc",
], optional = true }

floating = { path = "../floating" }
chrono = { version = "0.4" }
