[package]
name = "odu-value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = ["bytes/std", "serde?/std", "once_cell?/std", "chrono/std"]
serde = ["dep:serde", "hashbrown/serde", "chrono/serde"]
ord = []
types = ["odu-types", "once_cell"]

[dependencies]
odu-types = { path = "../odu-types", optional = true }
hashbrown = { version = "0.13" }
bytes = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = [
    "alloc",
], optional = true }

floating = { path = "../floating" }
chrono = { version = "0.4", default-features = false }


once_cell = { version = "1", default-features = false, optional = true }
